5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1575_1331.log
== TEST (2019-03-12 17:32:05) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:34) 
-- CODE:
print(50//3%4)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:10) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:55) 
-- CODE:
print(50//3%3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:14) 
-- CODE:
print((50//3)%3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:56) 
-- CODE:
print(50//3)(50%3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(50//3)(50%3)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:06) 
-- CODE:
print((50//3)50%3)
-- ERROR:
File "XXXX", line 1
    print((50//3)50%3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:36) 
-- CODE:
print(50//3%4)
-- ERROR:
File "XXXX", line 1
    print((50//3)50%3)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:55) 
-- CODE:
print(50//3,50%3)
-- OUTPUT:
16 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:15) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:23) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.179219
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
